src/yafl.h


typedef struct _yaflKalmanBaseSt yaflKalmanBaseSt;
typedef yaflStatusEn (* yaflKalmanFuncP)(yaflKalmanBaseSt *, yaflFloat *, \
                                         yaflFloat *);
typedef yaflStatusEn (* yaflKalmanResFuncP)(yaflKalmanBaseSt *, yaflFloat *, \
                                            yaflFloat *, yaflFloat *);
typedef yaflStatusEn (* yaflKalmanScalarUpdateP)(yaflKalmanBaseSt *, yaflInt);
typedef yaflStatusEn (* yaflKalmanUpdateCBP)(yaflKalmanBaseSt *);
typedef yaflStatusEn (* yaflKalmanUpdateCBP2)(yaflKalmanBaseSt *, yaflFloat *);
typedef yaflFloat (* yaflKalmanRobFuncP)(yaflKalmanBaseSt *, yaflFloat);
struct _yaflKalmanBaseSt {
    yaflKalmanFuncP f;       
    yaflKalmanFuncP h;       
    yaflKalmanResFuncP  zrf; 
    yaflKalmanUpdateCBP rcb; 
    yaflFloat * x;  
    yaflFloat * y;  
    yaflFloat * Up; 
    yaflFloat * Dp; 
    yaflFloat * Uq; 
    yaflFloat * Dq; 
    yaflFloat * Ur; 
    yaflFloat * Dr; 
    yaflFloat * l;  
    yaflFloat rff;  
    yaflInt   Nx;   
    yaflInt   Nz;   
};
YAFL_UKF_PREDICT_WRAPPER(yafl_ukf_adaptive_bierman_predict, yaflUKFAdaptivedSt)
YAFL_UKF_UPDATE_IMPL(yafl_ukf_adaptive_bierman_update, yaflUKFAdaptivedSt)
typedef yaflFloat (* yaflUKFRobFuncP)(yaflUKFBaseSt *, yaflFloat);